<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="general_category"
        android:title="@string/pref_title_general_category">

        <!-- Global enable/disable -->
        <SwitchPreferenceCompat
            android:key="PREF_KEY_APP_ENABLED"
            android:summary="@string/pref_summary_receive_notifications"
            android:title="@string/pref_title_receive_notifications" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="schedule_category"
        android:title="@string/pref_title_schedule_category"
        android:summary="@string/pref_summary_schedule_category">

        <com.jgendeavors.rossquotes.IntervalDialogPreference
            android:key="PREF_KEY_MIN_INTERVAL"
            android:title="@string/pref_title_min_interval"
            android:summary="summary"/>

        <com.jgendeavors.rossquotes.IntervalDialogPreference
            android:key="PREF_KEY_MAX_INTERVAL"
            android:title="@string/pref_title_max_interval"
            android:summary="summary"/>

    </PreferenceCategory>

</PreferenceScreen>