<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <!-- Header area -->
    <RelativeLayout
        android:id="@+id/fragment_dashboard_header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_large">

        <TextView
            android:id="@+id/fragment_dashboard_tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Text.Display.Large"
            android:textAlignment="center"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/fragment_dashboard_tv_premium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:textAlignment="center"
            android:text="tv_premium"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/fragment_dashboard_tv_app_name"/>

        <TextView
            android:id="@+id/fragment_dashboard_tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:textAppearance="@style/Text.Body.LowEmphasis"
            android:textAlignment="center"
            android:text="tv_version"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/fragment_dashboard_tv_premium"/>

    </RelativeLayout>

    <!-- Cards area -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/fragment_dashboard_header_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Received Messages -->
            <com.jgendeavors.rossquotes.DashboardCardView
                android:id="@+id/fragment_dashboard_card_messages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                app:icMain="@drawable/ic_message"
                app:titleText="@string/dashboard_card_received_messages_title"
                app:detailsText="@string/dashboard_card_received_messages_details"
                app:alertMode="NONE"/>

            <!-- Contacts -->
            <com.jgendeavors.rossquotes.DashboardCardView
                android:id="@+id/fragment_dashboard_card_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                app:icMain="@drawable/ic_person"
                app:titleText="@string/dashboard_card_contacts_title"
                app:detailsText="@string/dashboard_card_contacts_details"
                app:alertMode="NONE"/>

            <!-- Settings -->
            <com.jgendeavors.rossquotes.DashboardCardView
                android:id="@+id/fragment_dashboard_card_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                app:icMain="@drawable/ic_settings"
                app:titleText="@string/dashboard_card_settings_title"
                app:alertMode="NONE"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>